2010-05-26  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/xnee_session.c (xnee_init): 
	no-reparent turned OFF default

	* libxnee/src/xnee_setget.c (xnee_set_no_reparent_recording): 
	set, get and is functions for no-reparent functionality

	* libxnee/include/libxnee/xnee_resource.h (enum XNEE_OPTION_KEYS): 
	Replace XNEE_FORCED_REPARENT_RECORD with
	        XNEE_NO_REPARENT_RECORD		

	* libxnee/include/libxnee/xnee.h (struct): 
	forced_reparent_recording turned into no_reparent_recording 

2010-05-12  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/xnee_fileop.c (xnee_free_file): 
	Checking if file is null before printing (only debug print)

	* libxnee/src/xnee_utils.c (xnee_record_from_data_display): 
	Adding code to prepare for new XLIB fixes

	* libxnee/src/xnee_record.c: 
	* libxnee/src/xnee_replay.c: 
	Using functions in xnee_utils to find which display
	to use for sending control data
	Removed unused code
	
	* libxnee/src/xnee_session.c (xnee_close_down): 
	Added some debug printouts
	Removed clsoing of data display (don't know what's wrong :( )

	* libxnee/include/libxnee/xnee_utils.h: 
	* libxnee/src/xnee_utils.c: 
	Added functions:
	  xnee_record_from_data_display(xnee_data *xd);
	  xnee_get_display_for_recordcontext(xnee_data *xd);
	to handle workaround for Xorg server in 2009-2010


2010-05-11  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/xnee_record.c (xnee_record_handle_event_printer): 
	Removed debug printout
	Check if string is NULL before strcmp

	* cnee/src/main.c: 
	Removed sleep workaround

	* libxnee/src/xnee_record.c: 
	Removed debug printouts

	* libxnee/src/print.c: 
	Added printing of forced reparent mode when 
	writing to sessions file

	* libxnee/src/xnee_error.c: 
	Fixed typo (filure => failure)

	* libxnee/src/xnee_record.c: 
	Only recording all ReparentNotify when forced reparent
	mode

	* libxnee/src/xnee_resource.c: 
	Added parser functions for new forced reparent
	functionality
